# PWP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
PWP/: CMakeLists.txt
PWP/lib/: CMakeLists.txt
PWP/lib/core/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  utils.hpp
PWP/lib/numeric_methods/: CMakeLists.txt
PWP/lib/numeric_methods/derivate/: Central.hpp  Derivate.cpp  Derivate.hpp  DerivateBase.hpp  Forward.cpp  Forward.hpp  ForwardCreator.cpp  ForwardCreator.hpp  IDerivate.hpp  IDerivateCreator.hpp
PWP/lib/numeric_methods/derivate/stencil/: Stencil.hpp
PWP/lib/numeric_methods/derivate/stencil/backward/: BackwardStencil.hpp  d1Stencil.hpp  d2Stencil.hpp  d3Stencil.hpp  d4Stencil.hpp
PWP/lib/numeric_methods/derivate/stencil/central/: CentralStencil.hpp  d1Stencil.hpp  d2Stencil.hpp  d3Stencil.hpp  d4Stencil.hpp
PWP/lib/numeric_methods/derivate/stencil/forward/: ForwardStencil.hpp  d1Stencil.hpp  d2Stencil.hpp  d3Stencil.hpp  d4Stencil.hpp
PWP/lib/numeric_methods/derivative/: Backward.cpp  Backward.hpp  Central.hpp  DerivateBase.hpp  Forward.cpp  Forward.hpp  ForwardCreator.cpp  ForwardCreator.hpp  IDerivate.hpp  IDerivateCreator.hpp
PWP/lib/numeric_methods/derivative/stencil/: Stencil.hpp
PWP/lib/numeric_methods/eigenvalue_problems/: PowerMethod.cpp  PowerMethod.hpp
PWP/lib/numeric_methods/integrate/: Integrate.hpp
PWP/lib/numeric_methods/linear_systems/: ILinearSystem.hpp
PWP/lib/numeric_methods/linear_systems/direct_methods/: LUSolver.cpp  LUSolver.hpp
PWP/lib/numeric_methods/matrices_factorization/: LUDecomposition.cpp  LUDecomposition.hpp
PWP/tests/: .clang-tidy  Backward.test.cpp  CMakeLists.txt  Central.test.cpp  Forward.test.cpp  LUDecomposition.test.cpp  LUSolver.test.cpp  Matrix.test.cpp  PowerMethod.test.cpp  Stencil.test.cpp  Vector.test.cpp
PWP/tests/numeric_methods/: Forward.test.cpp
